@@ -50,6 +50,7 @@
 #include "translators/bibtexhandler.h" // needed for bibtex options
 #include "fetchdialog.h"
 #include "reportdialog.h"
+#include "bibtexkeydialog.h"
 #include "tellico_strings.h"
 #include "filterview.h"
 #include "loanview.h"
@@ -140,6 +141,7 @@ MainWindow::MainWindow(QWidget* parent_/*=0*/) : KXmlGuiWindow(parent_),
     m_filterDlg(0),
     m_collFieldsDlg(0),
     m_stringMacroDlg(0),
+    m_bibtexKeyDlg(0),
     m_fetchDlg(0),
     m_reportDlg(0),
     m_queuedFilters(0),
@@ -547,6 +549,11 @@ void MainWindow::initActions() {
   action->setText(i18n("String &Macros..."));
   action->setIcon(KIcon(QLatin1String("fileview-text")));
   action->setToolTip(i18n("Edit the bibtex string macros"));
+
+  action = actionCollection()->addAction(QLatin1String("coll_key_manager"), this, SLOT(slotShowBibtexKeyDialog()));
+  action->setText(i18n("Check for Duplicate Keys..."));
+  action->setIcon(KIcon(QLatin1String("text/x-bibtex")));
+  action->setToolTip(i18n("Check for duplicate citation keys"));
 
   QSignalMapper* citeMapper = new QSignalMapper(this);
   connect(citeMapper, SIGNAL(mapped(int)),
@@ -1816,6 +1823,29 @@ void MainWindow::slotStringMacroDialogOk() {
   if(m_stringMacroDlg) {
     static_cast<Data::BibtexCollection*>(Data::Document::self()->collection().data())->setMacroList(m_stringMacroDlg->stringMap());
     Data::Document::self()->slotSetModified(true);
+  }
+}
+
+void MainWindow::slotShowBibtexKeyDialog() {
+  if(Data::Document::self()->collection()->type() != Data::Collection::Bibtex) {
+    return;
+  }
+
+  if(!m_bibtexKeyDlg) {
+    m_bibtexKeyDlg = new BibtexKeyDialog(Data::Document::self()->collection(), this);
+    connect(m_bibtexKeyDlg, SIGNAL(finished()), SLOT(slotHideBibtexKeyDialog()));
+    connect(m_bibtexKeyDlg, SIGNAL(signalUpdateFilter(Tellico::FilterPtr)),
+            this, SLOT(slotUpdateFilter(Tellico::FilterPtr)));
+  } else {
+    KWindowSystem::activateWindow(m_bibtexKeyDlg->winId());
+  }
+  m_bibtexKeyDlg->show();
+}
+
+void MainWindow::slotHideBibtexKeyDialog() {
+  if(m_bibtexKeyDlg) {
+    m_bibtexKeyDlg->delayedDestruct();
+    m_bibtexKeyDlg = 0;
   }
 }
 
