@@ -1,6 +1,6 @@
 <?xml version = '1.0'?>
 <!DOCTYPE kpartgui SYSTEM "kpartgui.dtd">
-<kpartgui version="29" name="tellico">
+<kpartgui version="30" name="tellico">
  <MenuBar>
   <Menu name="file">
    <text>&amp;File</text>
@@ -92,6 +92,7 @@
     <text>&amp;Bibliography</text>
     <Action name="coll_convert_bibliography"/>
     <Action name="coll_string_macros"/>
+    <Action name="coll_key_manager"/>
     <Action name="cite_clipboard"/>
     <Action name="cite_lyxpipe"/>
    </Menu>
@@ -137,6 +138,7 @@
   <Action name="file_export_amc"/>
   <Action name="coll_convert_bibliography"/>
   <Action name="coll_string_macros"/>
+  <Action name="coll_key_manager"/>
   <Action name="cite_clipboard"/>
   <Action name="cite_lyxpipe"/>
  </Disable>
@@ -155,6 +157,7 @@
   <Action name="file_export_bibtex"/>
   <Action name="file_export_bibtexml"/>
   <Action name="coll_string_macros"/>
+  <Action name="coll_key_manager"/>
  </Enable>
 </State>
 
